--- a/project/index.html
+++ b/project/index.html
@@ -16,16 +16,16 @@
         <link href="css/font-awesome.min.css" rel="stylesheet"> 
 <!--          sliding css-->
           
-        <link rel="stylesheet" href="css/owl.carousel.css">
-        <link rel="stylesheet" href="css/owl.theme.css">
+        <link rel="stylesheet" href="css/owl.carousel.min.css">
+          <link rel="stylesheet" href="css/owl.theme.default.min.css">
         <link rel="stylesheet" href="css/animate.css">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
+<!--        [if lt IE 9]>-->
           <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+<!--        <![endif]-->
       </head>
       <body>
         <header class="header-area">
@@ -103,7 +103,7 @@
                 <h2>simple widgets</h2>
                 <p>Drag and Drop</p>
             </div>
-            <div class="slide">
+            <div class="owl-carousel">
                 <div class="slide-image">
                     <img src="images/slider4.png">
                 </div>
@@ -240,6 +240,8 @@
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery-1.11.3.min.js"></script>
         <script src="js/owl.carousel.min.js"></script>
-        <script src="main.js"></script>
+        <script src="js/jquery-1.11.3.min.js"></script>
+          <script src="js/owl.carousel.min.js"></script>
+          <script src="main.js"></script>
     </body>
 </html>
